--- a/Diploma Thesis/README
+++ b/Diploma Thesis/README
@@ -1,1 +1,20 @@
+# Diploma Thesis
+> Ανάλυση Στοιχείων Χρήσης Ψηφιακού Αποθετηρίου (
 
+### Structure
+---
+#### Exercises
+
+The AI course includes theoretical exercises that challenge students to analyze algorithms (e.g. A*, Hill Climbing, Best First, Branch and Bound) and solve complex problems, deepening their understanding of fundamental AI concepts and algorithms.
+    
+#### Lab
+
+In the AI course lab, students actively engage in hands-on exercises to apply and reinforce their understanding of machine learning algorithms and techniques (e.g. Recommenders). [![Python](https://img.shields.io/badge/-Python-3776AB?logo=python&logoColor=white)](https://www.python.org/)
+
+### Authors
+---
+
+- Eirini Donti (Owner)
+
+<!-- ### License
+--- -->
