--- a/Diploma Thesis/README
+++ b/Diploma Thesis/README
@@ -1,5 +1,5 @@
-# Diploma Thesis
-> Ανάλυση Στοιχείων Χρήσης Ψηφιακού Αποθετηρίου (
+# Artificial Intelligence 2022-2023
+> Exercises and Lab for **Artificial Intelligence** Course (6th semester)
 
 ### Structure
 ---
